@@ -26,13 +26,15 @@
 namespace libvoikko {
 
 char_type get_char_type(wchar_t c) {
-	if (wcschr(L".,;-!?:'\"»()[]{}"
+	if (wcschr(L".,;-!?:'()[]{}"
 	           L"\u00AD"  /* SOFT HYPHEN */
 	           L"\u2019"  /* RIGHT SINGLE QUOTATION MARK */
 	           L"\u2010"  /* HYPHEN */
 	           L"\u2011"  /* NON-BREAKING HYPHEN */
-	           L"\u201d"  /* quotation mark, double comma */
 	           , c)) return CHAR_PUNCTUATION;
+	if (isFinnishQuotationMark(c)) {
+		return CHAR_PUNCTUATION;
+	}
 	if (iswspace(c)) return CHAR_WHITESPACE;
 	if (wcschr(L"aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ"
 	           L"\u00C0"  /* LATIN CAPITAL LETTER A WITH GRAVE */
@@ -100,6 +102,12 @@ char_type get_char_type(wchar_t c) {
 	           , c)) return CHAR_LETTER;
 	if (wcschr(L"0123456789", c)) return CHAR_DIGIT;
 	return CHAR_UNKNOWN;
+}
+
+bool isFinnishQuotationMark(wchar_t c) {
+	return wcschr(L"\"»"
+	              L"\u201d"  /* quotation mark, double comma */
+	              , c) != 0;
 }
 
 /* Character conversion tables. After normalisation all character sequences on
