@@ -20,6 +20,7 @@
 #include "setup/setup.hpp"
 #include "utils/utils.hpp"
 #include "spellchecker/spell.hpp"
+#include "character/charset.hpp"
 #include <cstdlib>
 #include <wctype.h>
 
@@ -98,7 +99,7 @@ VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handl
 				end_found = true;
 				possible_end_punctuation = true;
 			}
-			else if (wcschr(L"\"»\u201d", punct)) {
+			else if (isFinnishQuotationMark(punct)) {
 				in_quotation = !in_quotation;
 				if (!in_quotation && slen + 1 < textlen && text[slen + 1] == L',') {
 					// Comma immediately after ending quote suggests that
